Page Cards can now be created, updated, and viewed

--- a/src/app/components/admin/admin-calendar/admin-calendar-new/admin-calendar-new.component.html
+++ b/src/app/components/admin/admin-calendar/admin-calendar-new/admin-calendar-new.component.html
@@ -50,7 +50,7 @@
                 <div class="card-body">
                     <form (ngSubmit)="onCalendarCreate(newCalForm.value)"
                           [formGroup]="newCalForm"
-                          *ngIf="calColumnValues; else loading">
+                          *ngIf="newCalForm; else loading">
 
                         <div class="form-group">
                             <label>Title <br>
