--- a/src/app/components/admin/admin-core/admin-cards/admin-cards-edit/admin-cards-edit.component.html
+++ b/src/app/components/admin/admin-core/admin-cards/admin-cards-edit/admin-cards-edit.component.html
@@ -3,7 +3,7 @@
 <div class="row mb-5 mt-5">
     <div class="container">
         <div class="col">
-            <div class="card bg-light image-uploader">
+            <div class="card image-uploader">
                 <div class="card-body">
                     <h5 class="card-title">
                         Image Uploader
