--- a/src/app/components/admin/admin-core/admin-contact-us/admin-contact-us-list/admin-contact-us-list.component.html
+++ b/src/app/components/admin/admin-core/admin-contact-us/admin-contact-us-list/admin-contact-us-list.component.html
@@ -75,7 +75,7 @@
                             {{ contact.sentDate | date:'medium' }}
                         </td>
                         <td class="text-center">
-                            <a class="btn btn-default btn-sm icon-btn md-btn-flat user-tooltip"
+                            <a class="btn btn-primary btn-sm icon-btn md-btn-flat user-tooltip"
                                matTooltip="View contact details"
                                [routerLink]="['/admin/contacts/', contact.$key]">
                                 <i class="fa fa-address-book"></i>&nbsp;
