--- a/src/app/components/admin/admin-core/admin-sidenav/admin-sidenav.component.html
+++ b/src/app/components/admin/admin-core/admin-sidenav/admin-sidenav.component.html
@@ -121,6 +121,30 @@
         </ul>
     </li>
 
+
+    <!-- * Page Cards * -->
+    <li class="sidenav-item"
+        [ngClass]="{'active open':showPageCardToggle, '':!showPageCardToggle}"
+        *ngIf="isLoggedIn">
+        <a class="sidenav-link sidenav-toggle" (click)="onShowPageCardToggle()">
+            <i class="sidenav-icon ion ion-md-speedometer"></i>
+            <div><i class="fal fa-window-restore"></i>&nbsp;<span class="helv">Page Cards</span></div>
+        </a>
+
+        <ul class="sidenav-menu">
+            <li class="sidenav-item sub-item">
+                <a [routerLink]="['/admin/page-cards']" class="sidenav-link">
+                    <div><i class="fal fa-window-restore"></i>&nbsp;<span class="helv">All Cards</span></div>
+                </a>
+            </li>
+            <li class="sidenav-item sub-item">
+                <a [routerLink]="['/admin/page-cards/new']" class="sidenav-link">
+                    <div><i class="fal fa-window-restore"></i>&nbsp;<span class="helv">New Card</span></div>
+                </a>
+            </li>
+        </ul>
+    </li>
+
     <!-- * Home Page * -->
     <li class="sidenav-item" *ngIf="isLoggedIn">
         <a [routerLink]="['/admin/home']" class="sidenav-link">
