Page Cards have been added to New Page and Edit Page

--- a/src/app/components/admin/admin-page-card/admin-page-card-new/admin-page-card-new.component.html
+++ b/src/app/components/admin/admin-page-card/admin-page-card-new/admin-page-card-new.component.html
@@ -128,7 +128,7 @@
                                 <button type="submit"
                                         [disabled]="!newPageCardForm.valid"
                                         class="btn btn-secondary full-width mb-3 mt-2">
-                                    <i class="fa fa-window-restore"></i>&nbsp;Update
+                                    <i class="fa fa-window-restore"></i>&nbsp;Create
                                 </button>
                             </form>
                         </div>
