--- a/src/app/components/core/pages-navbar/pages-navbar.component.html
+++ b/src/app/components/core/pages-navbar/pages-navbar.component.html
@@ -119,14 +119,17 @@
 
                         <!--BEGIN SEARCH-->
 
-                        <div class="row">
+                        <div class="row" *ngIf="customLinks">
                             <div class="col inline">
                                 <div id="MPAuxNav" class="inline auxnav">
                                     <div cssselectorclass="MPAuxNav" id="AuxMenu" style="float: right;">
                                         <ul class="level1 static" tabindex="0" role="menubar"
                                             style="position: relative; width: auto; float: left;">
                                             <!-- * Custom Link 1 * -->
-                                            <li role="menuitem" class="static" style="position: relative; float: left;">
+                                            <li role="menuitem"
+                                                class="static"
+                                                style="position: relative; float: left;"
+                                                *ngIf="customLinks.url1">
                                                 <a class="level1 MPAuxNav static"
                                                    [routerLink]="[customLinks.url1]"
                                                    tabindex="-1"
@@ -134,7 +137,10 @@
                                                     {{ customLinks.text1 }}
                                                 </a>
                                             </li>
-                                            <li role="menuitem" class="static" style="position: relative; float: left;">
+                                            <li role="menuitem"
+                                                class="static"
+                                                style="position: relative; float: left;"
+                                                *ngIf="customLinks.url1">
                                                 <a class="level1 MPAuxNav static"
                                                    [href]="customLinks.url1"
                                                    tabindex="-1"
@@ -144,7 +150,10 @@
                                                 </a>
                                             </li>
                                             <!-- * Custom Link 2 * -->
-                                            <li role="menuitem" class="static" style="position: relative; float: left;">
+                                            <li role="menuitem"
+                                                class="static"
+                                                style="position: relative; float: left;"
+                                                *ngIf="customLinks.url2">
                                                 <a class="level1 MPAuxNav static"
                                                    [routerLink]="[customLinks.url2]"
                                                    tabindex="-1"
@@ -152,7 +161,10 @@
                                                     {{ customLinks.text2 }}
                                                 </a>
                                             </li>
-                                            <li role="menuitem" class="static" style="position: relative; float: left;">
+                                            <li role="menuitem"
+                                                class="static"
+                                                style="position: relative; float: left;"
+                                                *ngIf="customLinks.url2">
                                                 <a class="level1 MPAuxNav static"
                                                    [href]="customLinks.url2"
                                                    tabindex="-1"
@@ -162,7 +174,10 @@
                                                 </a>
                                             </li>
                                             <!-- * Custom Link 3 * -->
-                                            <li role="menuitem" class="static" style="position: relative; float: left;">
+                                            <li role="menuitem"
+                                                class="static"
+                                                style="position: relative; float: left;"
+                                                *ngIf="customLinks.url3">
                                                 <a class="level1 MPAuxNav static"
                                                    [routerLink]="[customLinks.url3]"
                                                    tabindex="-1"
@@ -170,7 +185,10 @@
                                                     {{ customLinks.text3 }}
                                                 </a>
                                             </li>
-                                            <li role="menuitem" class="static" style="position: relative; float: left;">
+                                            <li role="menuitem"
+                                                class="static"
+                                                style="position: relative; float: left;"
+                                                *ngIf="customLinks.url3">
                                                 <a class="level1 MPAuxNav static"
                                                    [href]="customLinks.url3"
                                                    tabindex="-1"
@@ -180,7 +198,10 @@
                                                 </a>
                                             </li>
                                             <!-- * Custom Link 4 * -->
-                                            <li role="menuitem" class="static" style="position: relative; float: left;">
+                                            <li role="menuitem"
+                                                class="static"
+                                                style="position: relative; float: left;"
+                                                *ngIf="customLinks.url4">
                                                 <a class="level1 MPAuxNav static"
                                                    [routerLink]="[customLinks.url4]"
                                                    tabindex="-1"
@@ -188,7 +209,10 @@
                                                     {{ customLinks.text4 }}
                                                 </a>
                                             </li>
-                                            <li role="menuitem" class="static" style="position: relative; float: left;">
+                                            <li role="menuitem"
+                                                class="static"
+                                                style="position: relative; float: left;"
+                                                *ngIf="customLinks.url4">
                                                 <a class="level1 MPAuxNav static"
                                                    [href]="customLinks.url4"
                                                    tabindex="-1"
@@ -198,7 +222,10 @@
                                                 </a>
                                             </li>
                                             <!-- * Custom Link 5 * -->
-                                            <li role="menuitem" class="static" style="position: relative; float: left;">
+                                            <li role="menuitem"
+                                                class="static"
+                                                style="position: relative; float: left;"
+                                                *ngIf="customLinks.url5">
                                                 <a class="level1 MPAuxNav static"
                                                    [routerLink]="[customLinks.url5]"
                                                    tabindex="-1"
@@ -206,7 +233,10 @@
                                                     {{ customLinks.text5 }}
                                                 </a>
                                             </li>
-                                            <li role="menuitem" class="static" style="position: relative; float: left;">
+                                            <li role="menuitem"
+                                                class="static"
+                                                style="position: relative; float: left;"
+                                                *ngIf="customLinks.url5">
                                                 <a class="level1 MPAuxNav static"
                                                    [href]="customLinks.url5"
                                                    tabindex="-1"
