Fixed bug with page edit

--- a/src/app/components/admin/admin-page-card/admin-page-card-list/admin-page-card-list.component.html
+++ b/src/app/components/admin/admin-page-card/admin-page-card-list/admin-page-card-list.component.html
@@ -85,7 +85,7 @@
                         </td>
                         <td class="text-center">
                             <a class="btn btn-default btn-sm icon-btn md-btn-flat user-tooltip"
-                               matTooltip="View contact details"
+                               matTooltip="View card details"
                                [routerLink]="['/admin/page-cards/', card.$key, 'edit']">
                                 <i class="fa fa-pencil-alt"></i>&nbsp;
                             </a>
