--- a/src/app/components/admin/admin-custom-nav-link/admin-custom-nav-link-edit/admin-custom-nav-link-edit.component.html
+++ b/src/app/components/admin/admin-custom-nav-link/admin-custom-nav-link-edit/admin-custom-nav-link-edit.component.html
@@ -100,6 +100,9 @@
                                                class="custom-control-input"
                                                id="isExtURL1"
                                                formControlName="isExtURL1">
+                                        <label class="custom-control-label"
+                                               for="isExtURL1">External URL?
+                                        </label>
                                     </div>
                                 </div>
                                 <div class="form-group">
